# visualpipelinetest

./: README.md  pyproject.toml  requirements.txt
.claude/: launch.json
_gentest/: gen.py
clickshot/: __init__.py  associate.py  change.py  cli.py  config.py  cursor.py  cursor_template.py  debug.py  dedup.py  filters.py  models.py  output.py  pipeline.py  transitions.py
clickshot/io/: __init__.py  frames.py  manifest.py
clickshot/report/: __init__.py  walkthrough.py
out_2026-06-23_11-43-42/: events.json  index.html
out_2026-06-23_12-23-26/: index.html
out_2026-06-23_12-29-12/: events.json
out_2026-06-23_13-28-53/: events.json  index.html
out_2026-06-23_14-04-33/: events.json  index.html
out_cur1080 - Copy/: events.json  index.html
out_fix - Copy/: events.json  index.html
out_real/: events.json
out_synth/: events.json  index.html
tests/: conftest.py  synth.py  test_pipeline.py  test_units.py
